--- a/visual-testing-wdio/WebdriverIO-Applitools/Sample Site/index.html
+++ b/visual-testing-wdio/WebdriverIO-Applitools/Sample Site/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12@sm">
-        <h1 style="color: crimson">Movie Rental</h1>
+        <h1 style="color: blue">Movie Rental</h1>
       </div>
     </div>
   </div>
